Fix alignment issue for outer button

--- a/src/common/components/entry-vote-btn/_index.scss
+++ b/src/common/components/entry-vote-btn/_index.scss
@@ -290,8 +290,8 @@
 }
 
 .entry-list-item .item-body .item-controls svg {
-  width: 12px !important;
-  height: 12px !important;
+  width: 9px !important;
+  height: 9px !important;
 }
 
 .primary-btn-done {
@@ -321,11 +321,6 @@
     @include themify(night) {
       color: $dark-sky-blue !important;
       background-color: $transparent !important;
-
-
-    @media screen and (max-width: 480px) {
-      left: -1px !important;
-    }
     }
 
     @include themify(day) {
@@ -362,9 +357,6 @@
 
   .btn-inner {
     color: $red2 !important;
-    position: relative;
-    top: 1px !important;
-    left: 0.43px !important;
 
     @include themify(night) {
       background-color: $transparent !important;
@@ -411,10 +403,4 @@ p {
 .entry-vote-btn .btn-vote svg {
   width:11px !important;
   height:11px !important;
-
-}
-
-.entry-vote-btn .btn-inner {
-  position: relative;
-  top: -0.2px;
 }
